Fix title formatting in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 ##########
 # SITE IDENTITY
-title: "Clarence-Fitzroy-Bryant-College (CFBC)"
+title: "Clarence Fitzroy Bryant College (CFBC)"
 tagline: "Open access collection of texts, maps, and images"
 description: "A digital collection on the history of Clarence Fitzroy Bryant College (CFBC)."
 author: "Liburd Tavernier, Willa"
