--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ author: "Liburd Tavernier, Willa"
 
 ##########
 # URLS (GitHub Pages deployment)
-# If this is hosted at: https://uzoamaka1900.github.io/Clarence-Fitzroy-Bryant-College-CFBC-
+# Site published at: https://uzoamaka1900.github.io/Clarence-Fitzroy-Bryant-College-CFBC-/
 url: "https://uzoamaka1900.github.io"
-baseurl: "/Clarence Fitzroy Bryant College CFBC-"
+baseurl: "/Clarence-Fitzroy-Bryant-College-CFBC-"
 
 # GitHub repository reference
 repository: "uzoamaka1900/Clarence-Fitzroy-Bryant-College-CFBC-"
@@ -33,7 +33,7 @@ plugins:
 
 ##########
 # COLLECTION SETTINGS
-# Use your metadata CSV file name (without .csv) located in _data/
+# CSV (without .csv) in _data/ describing items
 metadata: demo-metadata
 
 collections:
@@ -51,17 +51,17 @@ lunr_search: true
 
 ##########
 # BRANDING (optional – update when logos ready)
-# organization-name: "Clarence-Fitzroy-Bryant-College (CFBC)"
-# organization-link: "https://uzoamaka1900.github.io/Clarence-Fitzroy-Bryant-College-CFBC-"
-# organization-logo-banner: "/objects/ST. KITTS AND NEVIS IN 1988.png"
+# organization-name: "Clarence-Fitzroy-Bryant College (CFBC)"
+# organization-link: "https://uzoamaka1900.github.io/Clarence-Fitzroy-Bryant-College-CFBC-/"
+# organization-logo-banner: "/objects/ST.%20KITTS%20AND%20NEVIS%20IN%201988.png"
 # organization-logo-nav: "/assets/img/logo-nav.png"
-# logo_image: "/objects/ST. KITTS AND NEVIS IN 1988.png"
+# logo_image: "/objects/ST.%20KITTS%20AND%20NEVIS%20IN%201988.png"
 
 ##########
 # FOOTER
 footer_credit: >
-  This project was created using <a href="https://collectionbuilder.github.io/">CollectionBuilder-GH</a>. 
-  Content © Clarence-Fitzroy-Bryant-College (CFBC).
+  This project was created using <a href="https://collectionbuilder.github.io/">CollectionBuilder-GH</a>.
+  Content © Clarence-Fitzroy-Bryant College (CFBC).
 
 ##########
 # BUILD SETTINGS
