--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ organization-logo-banner: "/assets/img/cfbc-crest.png"
 organization-logo-nav: "/assets/img/cfbc-crest.png"
 logo_image: "/assets/img/cfbc-crest.png"
 
-# ——— Custom visual variables you can use in includes/CSS ———
+# Background for the title band
 brand_images:
-  title_background: "/assets/img/background.jpg"   # hero/title-band background
+  title_background: "/assets/img/background.jpg"
   crest: "/assets/img/cfbc-crest.png"              # crest path (same as above)
 
 # Feature flags (handy if you toggle custom header/title later)
